# insights

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  insights.md  scheme.sql
.github/workflows/: prod.yml
src/: api.rs  errors.rs  main.rs  models.rs  pages.rs  repository.rs  service.rs
static/styles/: insight.css  new_insight.css
templates/: error.html  insights.html  new_insight.html
templates/pages/: insights.html  new_insight.html
templates/pages/scripts/: slider.js
templates/pages/styles/: insight.css  new_insight.css
