[package]
name = "insights"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34.0", features = ["full"] }
actix-web = { version = "4.4"  }
askama = "0.12.1"
serde = { version = "1.0.193", features = ["derive"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
tokio-postgres = {version="0.7.8", features=["with-uuid-1", "with-chrono-0_4"]}
uuid = { version = "1.6.1", features = ["v4", "serde"] }
bb8-postgres = { version = "0.8.1" }
log = "0.4.20"
env_logger = { version = "0.10.1", features = [] }